<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmallTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="message_hint">Messaging...</string>
    <string name="empty_message">message is empty.</string>
    
    <!-- crash dialog -->
    <string name="message_crash">Exception <b>\"%1$s\"</b> has been successfully caught!\n</string>
    <string name="message_crash_case">Exception <b>\"%1$s\"</b> (caused by <b>\"%2$s\"</b>) has been successfully caught!\n</string>

    <string name="button_report">Report It!</string>
    <string name="button_close">Close</string>
    <string name="text_send_report_hint">Press <b>\"Report It!\"</b> to see the stuff</string>
    <string name="text_crash_title">Crash Caught</string>
    <string name="button_ignore">Ignore</string>
    <string name="text_report_message">Application will exit after report succeed, please wait a second.</string>
    <string name="report_succeed">Crash report succeed, thanks to your feedback.</string>
    
    <!-- login activity -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
