<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@android:id/title"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_dialog_alert"
        android:drawablePadding="8dp"
        android:paddingBottom="1dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="8dp"
        android:text="@string/text_crash_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/text_send_report_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="2"
            android:onClick="onCloseClick"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/button_close" />


        <Button
            android:id="@+id/button_ignore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="2"
            android:onClick="onIgnoreClick"
            android:text="@string/button_ignore" />

        <Button
            android:id="@+id/button_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:maxLines="2"
            android:onClick="onReportClick"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/button_report" />


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>